<resources>
    <string name="app_name">DWH</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="lets_meet">Personalise your health &amp; manage your health data with dwh</string>
    <string name="signup">Sign up</string>
    <string name="login">Log in</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login_screen_text">Please enter your email with password for log in</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="ok">Okay</string>
    <string name="valid_password">Please enter correct  password or contact support@dwh.com</string>
    <string name="valid_email">Please enter correct email or contact support@dwh.com</string>
    <string name="valid_email_error">Please enter your email or contact support@dwh.com</string>
    <string name="error_email">Your email is not associated with dwh please contact to support@dwh.com</string>
    <string name="unauthorized">Unauthorized credential or please contact to support@dwh.com</string>
    <string name="signup_as">Sign up as?</string>
    <string name="doctor">Doctor</string>
    <string name="human">Human</string>
    <string name="gender_msg">, are you male or female?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age_msg">Are you 16 year old or above?</string>
    <string name="age_no_16_msg">We are sorry to inform you that due to legal reason you should be 16 year old or above to use</string>
    <string name="above_16_age">16+ year old</string>
    <string name="enter_dob">, please enter your date of birth &amp; email</string>
    <string name="valid_date_msg">Please select the date.</string>
    <string name="valid_time_msg">Please select the time.</string>
    <string name="country_msg">Which country, city or district do you live?</string>
    <string name="city">City/Town</string>
    <string name="valid_city">Please enter valid city</string>
    <string name="country">Country</string>
    <string name="valid_country">Please enter valid country</string>
    <string name="please_enter_info">Please write your name, country &amp; city</string>
    <string name="surname">Surname</string>
    <string name="name">Write your name</string>
    <string name="valid_name">Please enter your name</string>
    <string name="please_enter_email">Please enter your email</string>
    <string name="email">Email</string>
    <string name="please_enter_mob_no">Please enter your mobile number</string>
    <string name="mob_no">Mobile number</string>
    <string name="dr_prefix">Dr.</string>
    <string name="password">Password</string>
    <string name="password_limit">Password should contains minimum 8 character with uppercase - lowercase letters, numbers &amp; special characters</string>
    <string name="cnfm_password_limit">Confirm Password should contains minimum 8 character with uppercase - lowercase letters, numbers &amp; special characters</string>
    <string name="create_your_password">Let\'s create your password</string>
    <string name="weak_password">Your password is weak</string>
    <string name="weak_cnfm_password">Your confirm password is weak</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="password_not_match">Your password does not match</string>
    <string name="experience_suffix">year of experience</string>
    <string name="register">Register</string>
    <string name="term_condition_msg">We are almost done with your digital health account.</string>
    <string name="term_condition_msg2"><![CDATA[I have read and accept the term & conditions !]]></string>
    <string name="otp_msg">OTP has been sent to you on your email id.</string>
    <string name="please_enter_it_below">Please enter it below.</string>
    <string name="please_enter_otp">Please enter otp</string>
    <string name="didn_t_received_otp">Didn\'t received OTP?</string>
    <string name="invalid_otp">Invalid Otp</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="dr_msg">what is your speciality and experience?</string>
    <string name="speciality">Speciality</string>
    <string name="yr_of_work_experience">Year of work experience</string>
    <string name="valid_speciality">Please enter valid speciality</string>
    <string name="valid_experience">Please enter valid year of experience</string>
    <string name="what_is_your_email">What is your email?</string>
    <string name="reset_pwd_msg">Please reset your password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="warning_terms">Please confirm the following to use dwh</string>
    <string name="terms">I have read and accepted the Terms of Condition</string>
    <string name="terms_span">Terms of Condition</string>
    <string name="policy">I have read the Privacy Policy</string>
    <string name="policy_span">Privacy Policy</string>
    <string name="dwh">I Consent to dwh analyzing my personal health data, I supply and create an account and provide me an assessment</string>
    <string name="terms_error">Please check terms and policy to register.</string>
    <string name="please_check_internet_connection">Please check internet connection and try again.</string>
    <string name="welcome_message">Hi, This is DWH. I can digitalis your health.</string>
    <string name="welcome_message_dr">Hi, This is DWH. Would you like to see people as well as digitalis your health?</string>
    <string name="okeh">Okeh</string>
    <string name="errormessage">This field required !</string>
    <string name="have_we_met">Have we ever met.... ?</string>
    <string name="yeah">Yeah</string>
    <string name="choose_your_nation">Choose your nation...!</string>
    <string name="register_intro_msg">Finally we met 🙂. I am very excited to digitalis your health. Let me create your account.</string>
    <string name="register_intro_msg_dr">Finally we met 🙂. I am very excited to digitalis your health and will help to see people.</string>
    <string name="hmm">Hmm</string>
    <string name="eunuch">Third Gender</string>
    <string name="acha">Achha</string>
    <string name="lets_start">let\'s start</string>
    <string name="thanks">Thanks</string>
    <string name="enter_your_mobile_no">Enter Your Mobile No</string>
    <string name="got_it">Got It</string>
    <string name="date">Date of birth</string>
    <string name="day_1">Day-1</string>
    <string name="time">Time</string>
    <string name="sup">Super</string>
    <string name="change_your_password">Let\'s change your password!</string>
    <string name="done">Done</string>
    <string name="what_do_you_feel">What do you feel?</string>
    <string name="body">Body</string>
    <string name="next">Next</string>
    <string name="feedback_msg">Please tell me what you don’t know about this question, So we can improve! Write and choose all the option that apply to you.
</string>
    <string name="give_feedback">   Improve us....</string>
    <string name="type_to_give_more_details">Type to give more details</string>
    <string name="next_question">Next Question</string>
    <string name="i_want_to_choose_multiple_answers">I want to choose multiple answer.</string>
    <string name="need_improve_answer">Need to improve in answer.</string>
    <string name="the_question_doesn_t_feel_relevant_to_me">Question does not relevant to my symptom.</string>
    <string name="i_don_t_understand_the_question"> I don\'t understand this question.</string>
    <string name="search_feel">Search</string>
</resources>