<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ageTxt"
            style="@style/AnswerButtonTheme"
            android:text="@string/above_16_age" />

        <include
            android:id="@+id/logo_layout"
            layout="@layout/logo_layout" />

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/m10"
            android:padding="@dimen/p5"
            android:text="@string/please_enter_info"
            android:textColor="@color/label_text_color"
            android:textSize="@dimen/t22" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="vertical"
            android:padding="@dimen/p10">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/m5"
                android:layout_marginEnd="@dimen/m5"
                android:layout_marginBottom="@dimen/m5"
                android:background="@drawable/btn_selector"
                android:orientation="horizontal"
                android:paddingStart="@dimen/p25"
                android:paddingEnd="@dimen/p25">

                <TextView
                    android:id="@+id/drPrefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/p5"
                    android:paddingEnd="@dimen/p5"
                    android:text="@string/dr_prefix"
                    android:textColor="@color/pink"
                    android:textSize="@dimen/t16"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/nameEdtTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/name"
                    android:inputType="textNoSuggestions"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/pink"
                    android:textColorHint="@color/pink"
                    android:textSize="@dimen/t16" />
            </LinearLayout>

            <EditText
                android:id="@+id/countryTxt"
                style="@style/CustomButtonTheme"
                android:layout_gravity="end"
                android:editable="false"
                android:hint="@string/country"
                android:paddingStart="@dimen/p47"
                android:paddingEnd="@dimen/p47"
                android:singleLine="true"
                android:textColorHint="@color/pink" />

            <EditText
                android:id="@+id/cityTxt"
                style="@style/CustomButtonTheme"
                android:layout_gravity="end"
                android:editable="false"
                android:hint="@string/city"
                android:maxLines="1"
                android:textColorHint="@color/pink"
                android:textSize="@dimen/t16" />

            <TextView
                android:id="@+id/okayBtn"
                style="@style/CustomButtonTheme"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:gravity="center"
                android:text="@string/ok"
                android:visibility="visible" />

        </LinearLayout>
        <TextView
            android:id="@+id/errorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/t12"
            android:visibility="invisible"
            android:layout_marginStart="@dimen/m10"
            android:layout_marginEnd="@dimen/m10"
            android:padding="@dimen/p5"/>
        <include
            android:id="@+id/layout"
            layout="@layout/account_bottom_layout" />

    </LinearLayout>
</ScrollView>