<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginTxt"
            style="@style/AnswerButtonTheme"
            android:onClick="signUpClick"
            android:text="@string/signup" />

        <include
            android:id="@+id/logo_layout"
            layout="@layout/logo_layout" />

        <LinearLayout
            android:id="@+id/timeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/p5"
            android:paddingBottom="@dimen/p10"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/m10"
                android:padding="@dimen/p5"
                android:text="@string/signup_as"
                android:textColor="@color/label_text_color"
                android:textSize="@dimen/t22" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="vertical"
                android:padding="@dimen/p10">

                <TextView
                    android:id="@+id/doctorBtn"
                    style="@style/CustomButtonTheme"
                    android:layout_gravity="end"
                    android:textColorHint="@color/pink"
                    android:text="@string/doctor"/>

                <TextView
                    android:id="@+id/humanBtn"
                    style="@style/CustomButtonTheme"
                    android:text="@string/human"
                    android:layout_gravity="end"
                    android:textColorHint="@color/pink" />

            </LinearLayout>

        </LinearLayout>

        <include
            android:id="@+id/layout"
            layout="@layout/account_bottom_layout" />

    </LinearLayout>
</ScrollView>